--- a/index.html
+++ b/index.html
@@ -29,7 +29,19 @@
   </header>
 
   <div id="breadcrumbs"></div>
+
   <main id="grid"></main>
+
+  <!-- Debug log box for iPad -->
+  <div id="debug" class="debug" style="
+    position: fixed; bottom: 10px; left: 10px; right: 10px;
+    max-height: 35vh; overflow: auto; z-index: 4000;
+    background: rgba(0,0,0,0.65); color: #fff;
+    padding: 8px 10px; border-radius: 8px;
+    font: 12px/1.4 monospace; display:none;">
+  </div>
+  <button onclick="document.getElementById('debug').style.display='block'"
+    style="position:fixed;bottom:10px;right:10px;z-index:4001;">Show Debug</button>
 
   <!-- Viewer (modal) -->
   <div class="viewer" id="viewer">
