--- a/index.html
+++ b/index.html
@@ -30,7 +30,19 @@
 
   <div id="breadcrumbs"></div>
 
-  <main id="grid"></main>
+  <main id="grid">
+    <!-- Always-visible login link -->
+<div style="text-align:center;margin:2em 0;">
+  <a href="https://my.pcloud.com/oauth2/authorize?client_id=PVqQO9u7C1b&response_type=token&redirect_uri=https%3A%2F%2Faidamn81.github.io%2Fcloudskin%2F"
+     style="display:inline-block;padding:16px 24px;background:#2a7fff;color:#fff;
+            font-size:18px;border-radius:8px;text-decoration:none;font-weight:bold;">
+    🔑 Connect to pCloud
+  </a>
+  <p style="font-size:14px;opacity:.8;margin-top:8px;">
+    If it doesn’t open, long-press and choose <b>“Open in New Tab”</b>.
+  </p>
+</div>
+  </main>
 
   <!-- Debug log box for iPad -->
   <div id="debug" class="debug" style="
